--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "mern-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "server": "nodemon server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js",
+    "start": "nodemon server/app.js",
     "build" : "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
